feat: complete search user
